--- a/web-design/index.html
+++ b/web-design/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Parallax Web Design Landing Page</title>
+  <title>WANO Web Design</title>
   <!-- CSS -->
   <!-- Color Switcher -->
   <link rel="stylesheet" href="dist/color-switcher.css">
   <!-- flipster gallery -->
   <link rel="stylesheet" href="dist/jquery.flipster.min.css">
-  
+
   <!-- JS -->
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
   <script src="jquery.min.js"></script>
@@ -36,7 +36,7 @@
     </div>
     <div class="logo load-hidden" id="logo">
       <a href="#top">
-        WH
+        WANO
       </a>
     </div>
     <div class="menu-right">
@@ -146,10 +146,10 @@
 
     <div class=" bg-white">
       <div class="row container">
-        <div class="col-left padding-right">
+        <div class="col-left padding-right move-right">
           <img src="images/fast-speeds.svg" alt="">
         </div>
-        <div class="col-right padding-left">
+        <div class="col-right padding-left move-left">
           <h3>Lightning fast speeds even on slow internet connections</h3>
           <p>Did you know that a 3 seconds wait you lose 30% more customers?</p><br>
           <p>No more waiting for pages to load with our clean code and highly compressed images. Your clientelle will
@@ -160,14 +160,14 @@
 
     <div class="color-3">
       <div class="row container">
-        <div class="col-left padding-right">
+        <div class="col-left padding-right move-left">
           <h3 class="color-white">Fully Responsive Design using up to date web technologies</h3>
           <p>A responsive design means your website will look good on all devices, PC, tablets and mobile phones.</p>
           <br>
           <p>This means that all of your potential customers will be able to find your business.</p>
 
         </div>
-        <div class="col-right padding-left">
+        <div class="col-right padding-left move-right">
           <img src="images/responsive-design.svg" alt="">
         </div>
       </div>
@@ -175,10 +175,10 @@
 
     <div class="bg-white">
       <div class="row container">
-        <div class="col-left padding-right">
+        <div class="col-left padding-right move-right">
           <img src="images/shopping.svg" alt="">
         </div>
-        <div class="col-right padding-left">
+        <div class="col-right padding-left move-left">
           <h3>eCommerce at your doorstep</h3>
           <p>Now, more than ever businesses need to be provide a virtual shopping platform and be able to accept
             payments instantly online.</p><br>
@@ -204,8 +204,7 @@
                 <source srcset="images/gallery-img/w350/ai-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/ai-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/ai-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/ai-wide-746x520.png"
-                  data-src="images/gallery-img/ai-wide-746x520.png">
+                <img src="images/gallery-img/ai-wide-746x520.png" data-src="images/gallery-img/ai-wide-746x520.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/robotics/">
@@ -232,8 +231,7 @@
                 <source srcset="images/gallery-img/w350/fitness-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/fitness-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/fitness-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/fitness-wide.png"
-                  data-src="images/gallery-img/fitness-wide.png">
+                <img src="images/gallery-img/fitness-wide.png" data-src="images/gallery-img/fitness-wide.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/fitness/">
@@ -246,8 +244,7 @@
                 <source srcset="images/gallery-img/w350/kungfu-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/kungfu-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/kungfu-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/kungfu-wide.png"
-                  data-src="images/gallery-img/kungfu-wide.png">
+                <img src="images/gallery-img/kungfu-wide.png" data-src="images/gallery-img/kungfu-wide.png">
               </picture>
               <div class="content">
                 <a href="https://kaizenkungfu.co.za/">
@@ -274,8 +271,7 @@
                 <source srcset="images/gallery-img/w350/rosa-wide-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/rosa-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/rosa-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/rosa-wide-746x520.png"
-                  data-src="images/gallery-img/rosa-wide-746x520.png">
+                <img src="images/gallery-img/rosa-wide-746x520.png" data-src="images/gallery-img/rosa-wide-746x520.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/rosa/">
@@ -289,8 +285,7 @@
                 <source srcset="images/gallery-img/w500/music-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/music-500.png" media="(max-height: 700px)">
                 <source srcset="images/gallery-img/text7.gif" media="(max-height: 450px)">
-                <img src="images/gallery-img/music-wide.png"
-                  data-src="images/gallery-img/music-wide.png">
+                <img src="images/gallery-img/music-wide.png" data-src="images/gallery-img/music-wide.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/music/">
@@ -303,8 +298,7 @@
                 <source srcset="images/gallery-img/w350/marvel-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/marvel-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/marvel-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/marvel-wide.png"
-                  data-src="images/gallery-img/marvel-wide.png">
+                <img src="images/gallery-img/marvel-wide.png" data-src="images/gallery-img/marvel-wide.png">
               </picture>
               <div class="content">
                 <a href="https://i-love-you-marvel-avenger-3000.github.io/">
@@ -317,8 +311,7 @@
                 <source srcset="images/gallery-img/w350/photo-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/photo-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/photo-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/photo-wide.png"
-                  data-src="images/gallery-img/photo-wide.png">
+                <img src="images/gallery-img/photo-wide.png" data-src="images/gallery-img/photo-wide.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/photo-portfolio/">
@@ -331,8 +324,7 @@
                 <source srcset="images/gallery-img/w350/restaurant-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/restaurant-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/restaurant-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/restaurant-wide.png"
-                  data-src="images/gallery-img/restaurant-wide.png">
+                <img src="images/gallery-img/restaurant-wide.png" data-src="images/gallery-img/restaurant-wide.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/restaurant/">
@@ -364,20 +356,39 @@
 
       <div class="contact-left-col">
         <!-- <h1>Drop me a line to<br>discuss your website project</h1> -->
-        <form action="">
-          <input type="text" placeholder="Enter Name">
-          <input type="email" placeholder="Enter Email">
-          <textarea name="message" id="message" placeholder="How can we help you?"></textarea>
+
+        <!-- GET FORM ENDPOINT with my custom form code -->
+        <!-- <form action="https://getform.io/f/3b2f44af-d8ea-4a19-9191-3c38975b2ab6" method="POST">
+          <input type="text" placeholder="Enter Name" name="name">
+          <input type="email" placeholder="Enter Email" name="email">
+          <textarea name="message" id="message" placeholder="How can we help you?" name="message"></textarea>
           <div class="btn-box">
             <button class="common-btn">Submit Message</button>
-            <!-- <button class="common-btn">Start Free Trial</button> -->
           </div>
-        </form>
+        </form> -->
+        <!-- END GET FORM ENDPOINT with my custom form code -->
+
+        <!-- BITRIX24 Form -->
+        <script id="bx24_form_inline" data-skip-moving="true">
+          (function (w, d, u, b) {
+            w['Bitrix24FormObject'] = b; w[b] = w[b] || function () {
+              arguments[0].ref = u;
+              (w[b].forms = w[b].forms || []).push(arguments[0])
+            };
+            if (w[b]['forms']) return;
+            var s = d.createElement('script'); s.async = 1; s.src = u + '?' + (1 * new Date());
+            var h = d.getElementsByTagName('script')[0]; h.parentNode.insertBefore(s, h);
+          })(window, document, 'https://b24-f0onpn.bitrix24.com/bitrix/js/crm/form_loader.js', 'b24form');
+
+          b24form({ "id": "6", "lang": "en", "sec": "wk76xf", "type": "inline" });
+        </script>
+        <!-- End BITRIX24 Form -->
+
       </div>
-      <div class="contact-right-col">
+      <!-- <div class="contact-right-col">
         <img src="images/work-together.svg" alt="">
       </div>
-    </div>
+    </div> -->
   </section>
 
 
@@ -419,7 +430,7 @@
           <div class="footer-logo">
             <div class="logo" id="logo">
               <a href="#top">
-                WH
+                WANO
               </a>
             </div>
           </div>
@@ -546,28 +557,28 @@
     ScrollReveal().reveal('section, .ColorSwitcher', {
       delay: 0,
       duration: 750,
-      easing: 'ease-in',
+      easing: 'ease-out',
       opacity: 0,
     });
 
-    ScrollReveal().reveal('.logo', {
+    ScrollReveal().reveal('.logo, #bx_form_iframe_6', {
       delay: 0,
       duration: 500,
-      easing: 'ease-in',
+      easing: 'ease-out',
       opacity: 0,
     });
 
     ScrollReveal().reveal('.menu-left .one, .menu-right .one', {
       delay: 300,
       duration: 500,
-      easing: 'ease-in',
+      easing: 'ease-out',
       opacity: 0,
     });
 
     ScrollReveal().reveal('.menu-left .two, .menu-right .two', {
       delay: 600,
       duration: 500,
-      easing: 'ease-in',
+      easing: 'ease-out',
       opacity: 0,
     });
 
@@ -575,7 +586,7 @@
       delay: 0,
       distance: '200px',
       duration: 500,
-      easing: 'ease-in',
+      easing: 'ease-out',
       opacity: 0,
       origin: 'left'
     });
@@ -584,7 +595,7 @@
       delay: 350,
       distance: '200px',
       duration: 500,
-      easing: 'ease-in',
+      easing: 'ease-out',
       opacity: 0,
       origin: 'right'
     });
@@ -593,7 +604,7 @@
       delay: 500,
       distance: '200px',
       duration: 500,
-      easing: 'ease-in',
+      easing: 'ease-out',
       opacity: 0,
       origin: 'bottom'
     });
@@ -602,26 +613,26 @@
       delay: 1050,
       scale: 0.5,
       duration: 500,
-      easing: 'ease-in',
+      easing: 'ease-out',
       opacity: 0,
     });
 
     ScrollReveal().reveal('.sec_header, #contact h1', {
       delay: 150,
       distance: '100px',
-      duration: 500,
-      easing: 'ease-in',
+      duration: 700,
+      easing: 'ease-out',
       opacity: 0,
       origin: 'bottom'
     });
 
     ScrollReveal().reveal('.intro p', {
       delay: 500,
-      distance: '100px',
-      duration: 500,
-      easing: 'ease-in',
+      // distance: '100px',
+      duration: 700,
+      easing: 'ease',
       opacity: 0,
-      origin: 'bottom'
+      // origin: 'bottom'
     });
 
     ScrollReveal().reveal('.demo', {
@@ -632,47 +643,48 @@
     });
 
     ScrollReveal().reveal('.col img', {
-      delay: 500,
-      distance: '100px',
-      duration: 500,
-      easing: 'ease-in',
+      delay: 300,
+      scale: 0.6,
+      duration: 700,
+      easing: 'ease',
       opacity: 0,
-      origin: 'bottom'
+      // origin: 'bottom'
     });
     ScrollReveal().reveal('.col h4', {
-      delay: 900,
-      distance: '100px',
-      duration: 500,
+      delay: 700,
+      // distance: '100px',
+      duration: 700,
       easing: 'ease-in',
       opacity: 0,
-      origin: 'bottom'
+      // origin: 'bottom'
     });
     ScrollReveal().reveal('.col p', {
-      delay: 1250,
-      distance: '100px',
-      duration: 500,
+      delay: 900,
+      // scale: 0.5,
+      duration: 700,
       easing: 'ease-in',
       opacity: 0,
-      origin: 'bottom'
+      // origin: 'bottom'
     });
 
-    ScrollReveal().reveal('.col-left, .contact-left-col', {
-      delay: 500,
+    ScrollReveal().reveal('.move-right', {
+      delay: 300,
       distance: '100px',
-      duration: 500,
-      easing: 'ease-in',
+      duration: 700,
+      easing: 'ease-out',
       opacity: 0,
       origin: 'left'
     });
 
-    ScrollReveal().reveal('.col-right, .contact-right-col', {
-      delay: 1000,
+    ScrollReveal().reveal('.move-left', {
+      delay: 300,
       distance: '100px',
-      duration: 500,
-      easing: 'ease-in',
+      duration: 700,
+      easing: 'ease-out',
       opacity: 0,
       origin: 'right'
     });
+
   </script>
 </body>
 
