--- a/web-design/index.html
+++ b/web-design/index.html
@@ -12,7 +12,6 @@
   <link rel="stylesheet" href="dist/jquery.flipster.min.css">
 
   <!-- JS -->
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
   <script src="jquery.min.js"></script>
   <script src="dist/jquery.flipster.min.js"></script>
 
@@ -70,7 +69,7 @@
   <!-- Hero Section -->
   <section class="hero load-hidden">
     <!-- <img src="images/bg.jpg" id="bg" alt=""> -->
-    <img src="images/bg-pink-stars.png" id="bg" alt="">
+    <!-- <img src="images/bg-pink-stars.png" id="bg" alt=""> -->
     <img src="images/sun-no-blur-2049px.svg" id="sun" alt="">
     <!-- <img src="images/mountains-right-2049px.svg" id="mountain-right" alt=""> -->
     <!-- <img src="images/mountains-left-2049px.svg" id="mountain-left" alt=""> -->
@@ -114,7 +113,7 @@
 
     <div class="row">
       <div class="col">
-        <img src="images/design.svg" alt="">
+        <img src="images/design.svg" loading="lazy" alt="">
         <div class="content">
           <h4>Web Design</h4>
           <p>We create web sites from the ground up including:</p>
@@ -123,7 +122,7 @@
         </div>
       </div>
       <div class="col">
-        <img src="images/social.svg" alt="">
+        <img src="images/social.svg" loading="lazy" alt="">
         <div class="content">
           <h4>Social Media Marketing</h4>
           <p>A strong social media presence is an essential marketing tactic.</p>
@@ -131,7 +130,7 @@
         </div>
       </div>
       <div class="col">
-        <img src="images/writing.svg" alt="">
+        <img src="images/writing.svg" loading="lazy" alt="">
         <div class="content">
           <h4>Content Writing & SEO</h4>
           <p>Building a brand requires producing great web content and adding to it over a period of months.</p>
@@ -147,7 +146,7 @@
     <div class=" bg-white">
       <div class="row container">
         <div class="col-left padding-right move-right">
-          <img src="images/fast-speeds.svg" alt="">
+          <img src="images/fast-speeds.svg" loading="lazy" alt="">
         </div>
         <div class="col-right padding-left move-left">
           <h3>Lightning fast speeds even on slow internet connections</h3>
@@ -168,7 +167,7 @@
 
         </div>
         <div class="col-right padding-left move-right">
-          <img src="images/responsive-design.svg" alt="">
+          <img src="images/responsive-design.svg" loading="lazy" alt="">
         </div>
       </div>
     </div>
@@ -176,7 +175,7 @@
     <div class="bg-white">
       <div class="row container">
         <div class="col-left padding-right move-right">
-          <img src="images/shopping.svg" alt="">
+          <img src="images/shopping.svg" loading="lazy" alt="">
         </div>
         <div class="col-right padding-left move-left">
           <h3>eCommerce at your doorstep</h3>
@@ -196,7 +195,7 @@
       <article id="demo-flat" class="demo">
         <h3>Scroll or swipe left or right to view our work</h3>
 
-        <div id="flat">
+        <div id="flat" loading="lazy">
           <ul>
             <li data-flip-title="Red">
               <picture>
@@ -204,7 +203,7 @@
                 <source srcset="images/gallery-img/w350/ai-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/ai-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/ai-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/ai-wide-746x520.png" data-src="images/gallery-img/ai-wide-746x520.png">
+                <img loading="lazy" src="images/gallery-img/ai-wide-746x520.png" data-src="images/gallery-img/ai-wide-746x520.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/robotics/">
@@ -217,7 +216,7 @@
                 <source srcset="images/gallery-img/w350/dog-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/dog-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/dog-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/dog-wide.png" data-src="images/gallery-img/dog-wide.png">
+                <img loading="lazy" src="images/gallery-img/dog-wide.png" data-src="images/gallery-img/dog-wide.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/dogs/">
@@ -231,7 +230,7 @@
                 <source srcset="images/gallery-img/w350/fitness-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/fitness-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/fitness-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/fitness-wide.png" data-src="images/gallery-img/fitness-wide.png">
+                <img loading="lazy" src="images/gallery-img/fitness-wide.png" data-src="images/gallery-img/fitness-wide.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/fitness/">
@@ -244,7 +243,7 @@
                 <source srcset="images/gallery-img/w350/kungfu-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/kungfu-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/kungfu-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/kungfu-wide.png" data-src="images/gallery-img/kungfu-wide.png">
+                <img loading="lazy" src="images/gallery-img/kungfu-wide.png" data-src="images/gallery-img/kungfu-wide.png">
               </picture>
               <div class="content">
                 <a href="https://kaizenkungfu.co.za/">
@@ -257,7 +256,7 @@
                 <source srcset="images/gallery-img/w350/panda-2-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/panda-2-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/panda-2-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/panda-wide-746x5202.png"
+                <img loading="lazy" src="images/gallery-img/panda-wide-746x5202.png"
                   data-src="images/gallery-img/panda-wide-746x5202.png">
               </picture>
               <div class="content">
@@ -271,7 +270,7 @@
                 <source srcset="images/gallery-img/w350/rosa-wide-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/rosa-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/rosa-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/rosa-wide-746x520.png" data-src="images/gallery-img/rosa-wide-746x520.png">
+                <img loading="lazy" src="images/gallery-img/rosa-wide-746x520.png" data-src="images/gallery-img/rosa-wide-746x520.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/rosa/">
@@ -285,7 +284,7 @@
                 <source srcset="images/gallery-img/w500/music-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/music-500.png" media="(max-height: 700px)">
                 <source srcset="images/gallery-img/text7.gif" media="(max-height: 450px)">
-                <img src="images/gallery-img/music-wide.png" data-src="images/gallery-img/music-wide.png">
+                <img loading="lazy" src="images/gallery-img/music-wide.png" data-src="images/gallery-img/music-wide.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/music/">
@@ -298,7 +297,7 @@
                 <source srcset="images/gallery-img/w350/marvel-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/marvel-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/marvel-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/marvel-wide.png" data-src="images/gallery-img/marvel-wide.png">
+                <img loading="lazy" src="images/gallery-img/marvel-wide.png" data-src="images/gallery-img/marvel-wide.png">
               </picture>
               <div class="content">
                 <a href="https://i-love-you-marvel-avenger-3000.github.io/">
@@ -311,7 +310,7 @@
                 <source srcset="images/gallery-img/w350/photo-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/photo-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/photo-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/photo-wide.png" data-src="images/gallery-img/photo-wide.png">
+                <img loading="lazy" src="images/gallery-img/photo-wide.png" data-src="images/gallery-img/photo-wide.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/photo-portfolio/">
@@ -324,7 +323,7 @@
                 <source srcset="images/gallery-img/w350/restaurant-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/restaurant-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/restaurant-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/restaurant-wide.png" data-src="images/gallery-img/restaurant-wide.png">
+                <img loading="lazy" src="images/gallery-img/restaurant-wide.png" data-src="images/gallery-img/restaurant-wide.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/restaurant/">
@@ -334,7 +333,7 @@
           </ul>
         </div>
 
-        <script>
+        <script defer>
           var flat = $("#flat").flipster({
             style: 'flat',
             spacing: -0.25,
@@ -368,8 +367,8 @@
         </form> -->
         <!-- END GET FORM ENDPOINT with my custom form code -->
 
-        <!-- BITRIX24 Form -->
-        <script id="bx24_form_inline" data-skip-moving="true">
+        <!-- BITRIX24 Form defer to prevent render-blocking -->
+        <script id="bx24_form_inline" data-skip-moving="true" defer>
           (function (w, d, u, b) {
             w['Bitrix24FormObject'] = b; w[b] = w[b] || function () {
               arguments[0].ref = u;
