--- a/web-design/index.html
+++ b/web-design/index.html
@@ -203,7 +203,7 @@
                 <source srcset="images/gallery-img/w350/ai-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/ai-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/ai-500.png" media="(max-height: 700px)">
-                <img loading="lazy" src="images/gallery-img/ai-wide-746x520.png" data-src="images/gallery-img/ai-wide-746x520.png">
+                <img src="images/gallery-img/ai-wide-746x520.png" data-src="images/gallery-img/ai-wide-746x520.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/robotics/">
@@ -216,7 +216,7 @@
                 <source srcset="images/gallery-img/w350/dog-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/dog-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/dog-500.png" media="(max-height: 700px)">
-                <img loading="lazy" src="images/gallery-img/dog-wide.png" data-src="images/gallery-img/dog-wide.png">
+                <img src="images/gallery-img/dog-wide.png" data-src="images/gallery-img/dog-wide.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/dogs/">
@@ -230,7 +230,7 @@
                 <source srcset="images/gallery-img/w350/fitness-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/fitness-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/fitness-500.png" media="(max-height: 700px)">
-                <img loading="lazy" src="images/gallery-img/fitness-wide.png" data-src="images/gallery-img/fitness-wide.png">
+                <img src="images/gallery-img/fitness-wide.png" data-src="images/gallery-img/fitness-wide.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/fitness/">
@@ -243,7 +243,7 @@
                 <source srcset="images/gallery-img/w350/kungfu-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/kungfu-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/kungfu-500.png" media="(max-height: 700px)">
-                <img loading="lazy" src="images/gallery-img/kungfu-wide.png" data-src="images/gallery-img/kungfu-wide.png">
+                <img src="images/gallery-img/kungfu-wide.png" data-src="images/gallery-img/kungfu-wide.png">
               </picture>
               <div class="content">
                 <a href="https://kaizenkungfu.co.za/">
@@ -256,7 +256,7 @@
                 <source srcset="images/gallery-img/w350/panda-2-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/panda-2-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/panda-2-500.png" media="(max-height: 700px)">
-                <img loading="lazy" src="images/gallery-img/panda-wide-746x5202.png"
+                <img src="images/gallery-img/panda-wide-746x5202.png"
                   data-src="images/gallery-img/panda-wide-746x5202.png">
               </picture>
               <div class="content">
@@ -270,7 +270,7 @@
                 <source srcset="images/gallery-img/w350/rosa-wide-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/rosa-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/rosa-500.png" media="(max-height: 700px)">
-                <img loading="lazy" src="images/gallery-img/rosa-wide-746x520.png" data-src="images/gallery-img/rosa-wide-746x520.png">
+                <img src="images/gallery-img/rosa-wide-746x520.png" data-src="images/gallery-img/rosa-wide-746x520.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/rosa/">
@@ -284,7 +284,7 @@
                 <source srcset="images/gallery-img/w500/music-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/music-500.png" media="(max-height: 700px)">
                 <source srcset="images/gallery-img/text7.gif" media="(max-height: 450px)">
-                <img loading="lazy" src="images/gallery-img/music-wide.png" data-src="images/gallery-img/music-wide.png">
+                <img src="images/gallery-img/music-wide.png" data-src="images/gallery-img/music-wide.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/music/">
@@ -297,7 +297,7 @@
                 <source srcset="images/gallery-img/w350/marvel-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/marvel-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/marvel-500.png" media="(max-height: 700px)">
-                <img loading="lazy" src="images/gallery-img/marvel-wide.png" data-src="images/gallery-img/marvel-wide.png">
+                <img src="images/gallery-img/marvel-wide.png" data-src="images/gallery-img/marvel-wide.png">
               </picture>
               <div class="content">
                 <a href="https://i-love-you-marvel-avenger-3000.github.io/">
@@ -310,7 +310,7 @@
                 <source srcset="images/gallery-img/w350/photo-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/photo-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/photo-500.png" media="(max-height: 700px)">
-                <img loading="lazy" src="images/gallery-img/photo-wide.png" data-src="images/gallery-img/photo-wide.png">
+                <img src="images/gallery-img/photo-wide.png" data-src="images/gallery-img/photo-wide.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/photo-portfolio/">
@@ -323,7 +323,7 @@
                 <source srcset="images/gallery-img/w350/restaurant-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/restaurant-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/restaurant-500.png" media="(max-height: 700px)">
-                <img loading="lazy" src="images/gallery-img/restaurant-wide.png" data-src="images/gallery-img/restaurant-wide.png">
+                <img src="images/gallery-img/restaurant-wide.png" data-src="images/gallery-img/restaurant-wide.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/restaurant/">
