--- a/web-design/index.html
+++ b/web-design/index.html
@@ -199,11 +199,11 @@
           <ul>
             <li data-flip-title="Red">
               <picture>
-                <source srcset="images/gallery-img/w350/ai-350.png" media="(max-width: 576px)">
-                <source srcset="images/gallery-img/w350/ai-350.png" media="(max-height: 450px)">
-                <source srcset="images/gallery-img/w500/ai-500.png" media="(max-width: 991px)">
-                <source srcset="images/gallery-img/w500/ai-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/ai-wide-746x520.png" data-src="images/gallery-img/ai-wide-746x520.png">
+                <source srcset="images/gallery-img/w350/ai-350.png" media="(max-width: 576px)" width="358px" height="250px">
+                <source srcset="images/gallery-img/w350/ai-350.png" media="(max-height: 450px)" width="358px" height="250px">
+                <source srcset="images/gallery-img/w500/ai-500.png" media="(max-width: 991px)" width="502px" height="350px">
+                <source srcset="images/gallery-img/w500/ai-500.png" media="(max-height: 700px)" width="502px" height="350px">
+                <img src="images/gallery-img/ai-wide-746x520.png" data-src="images/gallery-img/ai-wide-746x520.png" loading="lazy">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/robotics/">
@@ -212,11 +212,11 @@
             </li>
             <li data-flip-title="Razzmatazz" data-flip-category="Purples">
               <picture>
-                <source srcset="images/gallery-img/w350/dog-350.png" media="(max-width: 576px)">
-                <source srcset="images/gallery-img/w350/dog-350.png" media="(max-height: 450px)">
-                <source srcset="images/gallery-img/w500/dog-500.png" media="(max-width: 991px)">
-                <source srcset="images/gallery-img/w500/dog-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/dog-wide.png" data-src="images/gallery-img/dog-wide.png">
+                <source srcset="images/gallery-img/w350/dog-350.png" media="(max-width: 576px)" width="358px" height="250px">
+                <source srcset="images/gallery-img/w350/dog-350.png" media="(max-height: 450px)" width="358px" height="250px">
+                <source srcset="images/gallery-img/w500/dog-500.png" media="(max-width: 991px)" width="502px" height="350px">
+                <source srcset="images/gallery-img/w500/dog-500.png" media="(max-height: 700px)" width="502px" height="350px">
+                <img src="images/gallery-img/dog-wide.png" data-src="images/gallery-img/dog-wide.png" loading="lazy">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/dogs/">
@@ -226,11 +226,11 @@
             </li>
             <li data-flip-title="Deep Lilac" data-flip-category="Purples">
               <picture>
-                <source srcset="images/gallery-img/w350/fitness-350.png" media="(max-width: 576px)">
-                <source srcset="images/gallery-img/w350/fitness-350.png" media="(max-height: 450px)">
-                <source srcset="images/gallery-img/w500/fitness-500.png" media="(max-width: 991px)">
-                <source srcset="images/gallery-img/w500/fitness-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/fitness-wide.png" data-src="images/gallery-img/fitness-wide.png">
+                <source srcset="images/gallery-img/w350/fitness-350.png" media="(max-width: 576px)" width="358px" height="250px">
+                <source srcset="images/gallery-img/w350/fitness-350.png" media="(max-height: 450px)" width="358px" height="250px">
+                <source srcset="images/gallery-img/w500/fitness-500.png" media="(max-width: 991px)" width="502px" height="350px">
+                <source srcset="images/gallery-img/w500/fitness-500.png" media="(max-height: 700px)" width="502px" height="350px">
+                <img src="images/gallery-img/fitness-wide.png" data-src="images/gallery-img/fitness-wide.png" loading="lazy">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/fitness/">
@@ -239,11 +239,11 @@
             </li>
             <li data-flip-title="Daisy Bush" data-flip-category="Purples">
               <picture>
-                <source srcset="images/gallery-img/w350/kungfu-350.png" media="(max-width: 576px)">
-                <source srcset="images/gallery-img/w350/kungfu-350.png" media="(max-height: 450px)">
-                <source srcset="images/gallery-img/w500/kungfu-500.png" media="(max-width: 991px)">
-                <source srcset="images/gallery-img/w500/kungfu-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/kungfu-wide.png" data-src="images/gallery-img/kungfu-wide.png">
+                <source srcset="images/gallery-img/w350/kungfu-350.png" media="(max-width: 576px)" width="358px" height="250px">
+                <source srcset="images/gallery-img/w350/kungfu-350.png" media="(max-height: 450px)" width="358px" height="250px">
+                <source srcset="images/gallery-img/w500/kungfu-500.png" media="(max-width: 991px)" width="502px" height="350px">
+                <source srcset="images/gallery-img/w500/kungfu-500.png" media="(max-height: 700px)" width="502px" height="350px">
+                <img src="images/gallery-img/kungfu-wide.png" data-src="images/gallery-img/kungfu-wide.png" loading="lazy">
               </picture>
               <div class="content">
                 <a href="https://kaizenkungfu.co.za/">
@@ -252,12 +252,12 @@
             </li>
             <li data-flip-title="Cerulean Blue" data-flip-category="Blues">
               <picture>
-                <source srcset="images/gallery-img/w350/panda-2-350.png" media="(max-width: 576px)">
-                <source srcset="images/gallery-img/w350/panda-2-350.png" media="(max-height: 450px)">
-                <source srcset="images/gallery-img/w500/panda-2-500.png" media="(max-width: 991px)">
-                <source srcset="images/gallery-img/w500/panda-2-500.png" media="(max-height: 700px)">
+                <source srcset="images/gallery-img/w350/panda-2-350.png" media="(max-width: 576px)" width="358px" height="250px">
+                <source srcset="images/gallery-img/w350/panda-2-350.png" media="(max-height: 450px)" width="358px" height="250px">
+                <source srcset="images/gallery-img/w500/panda-2-500.png" media="(max-width: 991px)" width="502px" height="350px">
+                <source srcset="images/gallery-img/w500/panda-2-500.png" media="(max-height: 700px)" width="502px" height="350px">
                 <img src="images/gallery-img/panda-wide-746x5202.png"
-                  data-src="images/gallery-img/panda-wide-746x5202.png">
+                  data-src="images/gallery-img/panda-wide-746x5202.png" loading="lazy">
               </picture>
               <div class="content">
                 <a href="https://orphanlove81.github.io/">
@@ -266,11 +266,11 @@
             </li>
             <li data-flip-title="Dodger Blue" data-flip-category="Blues">
               <picture>
-                <source srcset="images/gallery-img/w350/rosa-wide-350.png" media="(max-width: 576px)">
-                <source srcset="images/gallery-img/w350/rosa-wide-350.png" media="(max-height: 450px)">
-                <source srcset="images/gallery-img/w500/rosa-500.png" media="(max-width: 991px)">
-                <source srcset="images/gallery-img/w500/rosa-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/rosa-wide-746x520.png" data-src="images/gallery-img/rosa-wide-746x520.png">
+                <source srcset="images/gallery-img/w350/rosa-wide-350.png" media="(max-width: 576px)" width="358px" height="250px">
+                <source srcset="images/gallery-img/w350/rosa-wide-350.png" media="(max-height: 450px)" width="358px" height="250px">
+                <source srcset="images/gallery-img/w500/rosa-500.png" media="(max-width: 991px)" width="502px" height="350px">
+                <source srcset="images/gallery-img/w500/rosa-500.png" media="(max-height: 700px)" width="502px" height="350px">
+                <img src="images/gallery-img/rosa-wide-746x520.png" data-src="images/gallery-img/rosa-wide-746x520.png" loading="lazy">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/rosa/">
@@ -279,12 +279,12 @@
             </li>
             <li data-flip-title="Cyan" data-flip-category="Blues">
               <picture>
-                <source srcset="images/gallery-img/w350/music-350.png" media="(max-width: 576px)">
-                <source srcset="images/gallery-img/w350/music-350.png" media="(max-height: 450px)">
-                <source srcset="images/gallery-img/w500/music-500.png" media="(max-width: 991px)">
-                <source srcset="images/gallery-img/w500/music-500.png" media="(max-height: 700px)">
-                <source srcset="images/gallery-img/text7.gif" media="(max-height: 450px)">
-                <img src="images/gallery-img/music-wide.png" data-src="images/gallery-img/music-wide.png">
+                <source srcset="images/gallery-img/w350/music-350.png" media="(max-width: 576px)" width="358px" height="250px">
+                <source srcset="images/gallery-img/w350/music-350.png" media="(max-height: 450px)" width="358px" height="250px">
+                <source srcset="images/gallery-img/w500/music-500.png" media="(max-width: 991px)" width="502px" height="350px">
+                <source srcset="images/gallery-img/w500/music-500.png" media="(max-height: 700px)" width="502px" heigh width="358px" height="250px"t="350px">
+                <source srcset="images/gallery-img/text7.gif" media="(max-height: 450px)" width="358px" height="250px">
+                <img src="images/gallery-img/music-wide.png" data-src="images/gallery-img/music-wide.png" loading="lazy">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/music/">
@@ -293,11 +293,11 @@
             </li>
             <li data-flip-title="Robin's Egg" data-flip-category="Blues">
               <picture>
-                <source srcset="images/gallery-img/w350/marvel-350.png" media="(max-width: 576px)">
-                <source srcset="images/gallery-img/w350/marvel-350.png" media="(max-height: 450px)">
-                <source srcset="images/gallery-img/w500/marvel-500.png" media="(max-width: 991px)">
-                <source srcset="images/gallery-img/w500/marvel-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/marvel-wide.png" data-src="images/gallery-img/marvel-wide.png">
+                <source srcset="images/gallery-img/w350/marvel-350.png" media="(max-width: 576px)" width="358px" height="250px">
+                <source srcset="images/gallery-img/w350/marvel-350.png" media="(max-height: 450px)" width="358px" height="250px">
+                <source srcset="images/gallery-img/w500/marvel-500.png" media="(max-width: 991px)" width="502px" height="350px">
+                <source srcset="images/gallery-img/w500/marvel-500.png" media="(max-height: 700px)" width="502px" height="350px">
+                <img src="images/gallery-img/marvel-wide.png" data-src="images/gallery-img/marvel-wide.png" loading="lazy">
               </picture>
               <div class="content">
                 <a href="https://i-love-you-marvel-avenger-3000.github.io/">
@@ -306,11 +306,11 @@
             </li>
             <li data-flip-title="Deep Sea" data-flip-category="Greens">
               <picture>
-                <source srcset="images/gallery-img/w350/photo-350.png" media="(max-width: 576px)">
-                <source srcset="images/gallery-img/w350/photo-350.png" media="(max-height: 450px)">
-                <source srcset="images/gallery-img/w500/photo-500.png" media="(max-width: 991px)">
-                <source srcset="images/gallery-img/w500/photo-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/photo-wide.png" data-src="images/gallery-img/photo-wide.png">
+                <source srcset="images/gallery-img/w350/photo-350.png" media="(max-width: 576px)" width="358px" height="250px">
+                <source srcset="images/gallery-img/w350/photo-350.png" media="(max-height: 450px)" width="358px" height="250px">
+                <source srcset="images/gallery-img/w500/photo-500.png" media="(max-width: 991px)" width="502px" height="350px">
+                <source srcset="images/gallery-img/w500/photo-500.png" media="(max-height: 700px)" width="502px" height="350px">
+                <img src="images/gallery-img/photo-wide.png" data-src="images/gallery-img/photo-wide.png" loading="lazy">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/photo-portfolio/">
@@ -319,11 +319,11 @@
             </li>
             <li data-flip-title="Apple" data-flip-category="Greens">
               <picture>
-                <source srcset="images/gallery-img/w350/restaurant-350.png" media="(max-width: 576px)">
-                <source srcset="images/gallery-img/w350/restaurant-350.png" media="(max-height: 450px)">
-                <source srcset="images/gallery-img/w500/restaurant-500.png" media="(max-width: 991px)">
-                <source srcset="images/gallery-img/w500/restaurant-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/restaurant-wide.png" data-src="images/gallery-img/restaurant-wide.png">
+                <source srcset="images/gallery-img/w350/restaurant-350.png" media="(max-width: 576px)" width="358px" height="250px">
+                <source srcset="images/gallery-img/w350/restaurant-350.png" media="(max-height: 450px)" width="358px" height="250px">
+                <source srcset="images/gallery-img/w500/restaurant-500.png" media="(max-width: 991px)" width="502px" height="350px">
+                <source srcset="images/gallery-img/w500/restaurant-500.png" media="(max-height: 700px)" width="502px" height="350px">
+                <img src="images/gallery-img/restaurant-wide.png" data-src="images/gallery-img/restaurant-wide.png" loading="lazy">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/restaurant/">
@@ -333,7 +333,7 @@
           </ul>
         </div>
 
-        <script defer>
+        <script>
           var flat = $("#flat").flipster({
             style: 'flat',
             spacing: -0.25,
@@ -368,7 +368,7 @@
         <!-- END GET FORM ENDPOINT with my custom form code -->
 
         <!-- BITRIX24 Form defer to prevent render-blocking -->
-        <script id="bx24_form_inline" data-skip-moving="true" defer>
+        <script id="bx24_form_inline" data-skip-moving="true">
           (function (w, d, u, b) {
             w['Bitrix24FormObject'] = b; w[b] = w[b] || function () {
               arguments[0].ref = u;
